objects/LOLUtilitiesSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings used by the LOLUtilities class</description>
    <fields>
        <fullName>cfgEmail__c</fullName>
        <description>Email value of current entry - optionally enter an email address</description>
        <label>cfgEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cfgIsYorN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is current configuration item Yes or No</description>
        <inlineHelpText>Optional usage for current row - if needed then contains a Boolean value</inlineHelpText>
        <label>cfgIsYorN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfgText__c</fullName>
        <description>Text value for configuration setting</description>
        <label>cfgText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LOLUtilities Settings</label>
</CustomObject>